# skill-driven-longtail-world-model

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
configs/: paths.example.yaml  seed_detection.yaml
configs/data/: av2_motion.yaml
configs/generation/: counterfactual_v1.yaml  filters_v1.yaml  formal_execution_v1.yaml  latent_search_v1.yaml  performance_v1.yaml
configs/models/: cvae_baseline.yaml  cvae_generation_repair_v1.yaml
configs/prediction/: formal_v1.json
configs/skills/: abrupt_u_turn_conflict.yaml  adjacent_vehicle_cut_in.yaml  bike_lane_vehicle_merge_conflict.yaml  candidate_catalog.yaml  catalog.yaml  chain_braking.yaml  construction_object_lane_blockage.yaml  crossing_path_conflict.yaml  crosswalk_pedestrian_crossing.yaml  cut_in_then_brake.yaml  cut_out_reveals_slow_vehicle.yaml  cyclist_crossing.yaml  cyclist_vehicle_merge.yaml  diverge_lane_crossing_conflict.yaml  forced_lane_change_around_blockage.yaml  group_pedestrian_crossing.yaml  hard_brake.yaml  intersection_blocking_vehicle.yaml  intersection_creep_conflict.yaml  jaywalking_pedestrian_crossing.yaml  lane_drop_merge_competition.yaml  late_lane_change_before_diverge.yaml  lead_hard_brake.yaml  lead_sudden_stop.yaml  merge_without_yield.yaml  merge_yield.yaml  (+20 more)
docs/: counterfactual-generation-review.md  cvae-baseline-review.md  downstream-prediction-review.md  environment.md  preparation-status.md  risks.md  seed-detection-development-review.md  seed-detection-expanded-review.md
manifests/: README.md  development_validation.csv  internal_validation.csv
scripts/: README.md  download_av2_subset.py  download_av2_test_sample.py  render_synthetic_bev.py  split_av2_train_pool.py  verify_av2_download.py
skilldrive/: __init__.py  config.py
tests/: README.md  conftest.py  test_av2_reader.py  test_bev.py  test_coordinates.py  test_schemas.py  test_skills.py  test_subset_selection.py  test_train_pool_split.py  test_verify_download.py
(+247 files in other folders)
