[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skilldrive"
version = "0.1.0"
description = "Preparation utilities for skill-driven long-tail trajectory scenario generation."
requires-python = ">=3.10,<3.12"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
av2 = ["av2>=0.3.5,<1"]
dev = ["pytest>=7.4,<9"]

[tool.setuptools.packages.find]
include = ["skilldrive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
