[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skilldrive"
version = "0.1.0"
description = "Skill-driven long-tail trajectory world modeling for autonomous driving."
requires-python = ">=3.10,<3.12"
dependencies = [
  "av2>=0.3.5,<1",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "PyYAML>=6,<7",
  "torch==2.13.0",
]

[dependency-groups]
dev = ["pytest>=7.4,<9"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["skilldrive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --import-mode=importlib"
markers = [
  "gpu: tests that require a CUDA-capable GPU",
]
